--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -10,3 +10,4 @@
 @import "../blocks/directions.scss";
 @import "../blocks/gallery.scss";
 @import "../blocks/wrapper.scss";
+@import "../blocks/burger.scss";
