--- a/src/blocks/directions.scss
+++ b/src/blocks/directions.scss
@@ -2,6 +2,9 @@
   margin: 0 auto;
   padding-bottom: 150px;
   max-width: 1540px;
+  font-family: "Bebas Neue", cursive;
+  background-color: rgb(35, 29, 29);
+  color: #fff;
 
   &_content {
     display: grid;
@@ -11,10 +14,10 @@
   }
 
   &_title {
-    font-size: 50px;
+    font-size: 30px;
     text-align: center;
     margin: 50px auto 100px;
-    font-weight: 600;
+    font-weight: 500;
   }
 
   &_list {
