--- a/src/blocks/title.scss
+++ b/src/blocks/title.scss
@@ -1,31 +1,34 @@
 .title {
-  height: 900px;
+  height: 100%;
   background-color: rgb(35, 29, 29);
+  margin: -1px 0;
 
   &_photo {
     // height: 700px;
     max-width: 700px;
-    margin: 100px auto;
+    margin: 60px auto 50px;
     // overflow: hidden;
     box-sizing: border-box;
+    // align-items: center;
+    text-align: center;
+
+    @include iPhone {
+      max-width: 400px;
+    }
 
     @include iPad {
       max-width: 500px;
-    }
-
-    @include iPhone {
-      max-width: 350px;
     }
 
     &--img {
       width: 100%;
       transform: rotate(-10deg);
 
-      @include iPad {
-        width: 80%;
-      }
-  
       @include iPhone {
+        width: 60%;
+      }
+
+      @include iPad {
         width: 80%;
       }
     }
