--- a/src/blocks/burger.scss
+++ b/src/blocks/burger.scss
@@ -1,27 +1,78 @@
 .burger {
-  box-sizing: border-box;
-  // width: 100%;
-  height: 100%;
-  display: flex;
-  align-items: center;
 
-  &_content {
-    // height: 100%;
-    display: flex;
-    flex-direction: column;
-    // margin-top: 22px;
-    margin-right: 25px;
-    text-align: center;
+  //icon_menu
+  &_menu {
+    display: none;
 
-    :first-child {
-      margin-top: 0;
+    @include iPhone {
+      display: block;
+      flex: 0 0 30px;
+      height: 18px;
+      position: relative;
+      z-index: 5;
     }
   }
 
-  &_line {
-    width: 25px;
-    height: 1px;
-    background-color: #fff;
-    margin-top: 6px;
+  &_button {
+    display: none;
+    background-color: transparent;
+    border: none;
+    margin-top: 18px;
+    margin-right: 25px;
+
+    @include iPhone {
+      display: block;
+      position: relative;
+      flex: 0 0 30px;
+      height: 18px;
+      z-index: 2;
+    }
   }
+}
+
+.burger_menu span {
+  content: "";
+  position: absolute;
+  right: 0;
+  width: 100%;
+  height: 2px;
+  background-color: #fff;
+  bottom: calc(50% - 1px);
+  transition: all 0.2s linear 0s;
+}
+
+.burger_menu::after {
+  content: "";
+  position: absolute;
+  right: 0;
+  width: 100%;
+  height: 2px;
+  background-color: #fff;
+  bottom: 0;
+  transition: all 0.3s linear 0s;
+}
+
+.burger_menu::before {
+  content: "";
+  position: absolute;
+  right: 0;
+  width: 100%;
+  height: 2px;
+  background-color: #fff;
+  top: 0;
+  transition: all 0.3s linear 0s;
+}
+
+.menu_open .burger_menu span {
+  width: 0;
+}
+
+.menu_open .burger_menu::after {
+  transform: rotate(45deg);
+  top: calc(50% - 1px);
+}
+
+.menu_open .burger_menu::before {
+  transform: rotate(-45deg);
+  top: calc(50% - 1px);
 }
