--- a/src/blocks/gallery.scss
+++ b/src/blocks/gallery.scss
@@ -2,10 +2,11 @@
   background-color: rgb(35, 29, 29);
 
   &_title {
-    color: rgb(129, 122, 122);
+    color: #fff;
     font-size: 50px;
     padding: 60px 0 20px 30px;
     text-align: center;
+    font-weight: 500;
   }
 
   &_container {
