--- a/src/blocks/menu.scss
+++ b/src/blocks/menu.scss
@@ -1,27 +1,84 @@
 .menu {
   display: flex;
-  justify-content: space-between;
-  width: 100%;
-  max-width: 1000px;
-  margin-right: 30px;
-  flex-wrap: wrap;
-  font-family: "Bebas Neue", cursive;
+  justify-content: center;
+  align-items: center;
+  color: #fff;
 
-  @include iPad {
-    font-size: 16px;
+  &_list {
+    display: flex;
+    column-gap: 50px;
+    row-gap: 5px;
+    flex-wrap: wrap;
+    justify-content: center;
+    font-size: 24px;
+
+    @include iPhone {
+      flex-direction: column;
+      align-items: center;
+      padding-top: 150px;
+      font-size: calc(16px + 4 * (100vw / 992));
+    }
+
+    @include iPad {
+      font-size: calc(16px + 4 * ((100vw - 768px) / (992 - 768)));
+    }
+
+    @include NoteBook {
+      font-size: calc(18px + 4 * ((100vw - 992px) / (1540 - 992)));
+    }
+
   }
 
-  @include iPhone {
-    display: none;
+  &_link {
+    display: block;
   }
 
-  a {
-    text-decoration: none;
-    color: rgb(181, 176, 176);
+  &_link:hover {
+    text-decoration: underline;
   }
 
   &_item {
     align-self: center;
-    padding: 25px;
+    padding: 25px 0 20px;
+  }
+
+  &_body {
+
+    @include iPhone {
+      position: fixed;
+      top: 0;
+      left: -100%;
+      width: 100%;
+      height: 100%;
+      background-color: #370a41;
+      transition: left 0.3s 0s;
+
+      ::before {
+        content: "";
+        width: 100%;
+        position: fixed;
+        top: 0;
+        left: -100%;
+        height: 160px;
+        background-color: #370a41;
+        z-index: 2;
+        transition: left 0.3s 0s;
+      }
+    }
+  }
+}
+
+.menu_open .menu_item:first-child {
+  @include iPhone {
+    margin-top: 100px;
+  }
+}
+
+.menu_open .menu_body {
+  overflow: scroll;
+  left: 0;
+
+  ::before {
+    left: 0;
   }
 }
