--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,8 +2,9 @@
 @import "fonts";
 @import "typography";
 
+@import "../blocks/reset.scss";
 @import "../blocks/page.scss";
-@import "../blocks/container.scss";
+// @import "../blocks/container.scss";
 @import "../blocks/header.scss";
 @import "../blocks/menu.scss";
 @import "../blocks/title.scss";
