--- a/src/blocks/menu.scss
+++ b/src/blocks/menu.scss
@@ -51,7 +51,7 @@
       width: 100%;
       height: 100%;
       background-color: #370a41;
-      transition: left 0.3s 0s;
+      transition: left 0.4s ease-in-out;
 
       ::before {
         content: "";
