--- a/src/blocks/directions.scss
+++ b/src/blocks/directions.scss
@@ -4,6 +4,7 @@
   max-width: 1540px;
   background-color: rgb(35, 29, 29);
   color: #fff;
+  padding-top: 10px;
 
   &_content {
     display: grid;
