--- a/src/blocks/page.scss
+++ b/src/blocks/page.scss
@@ -23,7 +23,7 @@ html {
 body {
   height: 100%;
   line-height: 1;
-  font-family: 'Mulish', sans-serif;
+  font-family: "Mulish", sans-serif;
   background-color: rgb(35, 29, 29);
 }
 
