--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -12,3 +12,4 @@
 @import "../blocks/gallery.scss";
 @import "../blocks/wrapper.scss";
 @import "../blocks/burger.scss";
+@import "../blocks/master_class.scss";
