--- a/src/blocks/master_class.scss
+++ b/src/blocks/master_class.scss
@@ -1,15 +1,12 @@
 .master_class {
 
-  &__container {
-
-  }
-
   &__title {
-    color: #fff;
-    font-size: 50px;
-    padding: 60px 0 20px 30px;
-    text-align: center;
-    font-weight: 500;
+      color: #fff;
+      font-size: 50px;
+      padding: 60px 0 2px 30px;
+      text-align: center;
+      font-weight: 500;
+      display: block;
   }
 
   &__content {
@@ -17,7 +14,7 @@
     width: 100%;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    column-gap: 30px;
+    column-gap: 50px;
 
     @include iPhone {
       display: flex;
@@ -29,8 +26,25 @@
     text-align: center;
     margin-bottom: 50px;
 
-    &_Ytube {
-      // width: 100%;
+    &-title {
+      color: #fff;
+      margin-bottom: 30px;
+      font-size: 36px;
+
+      @include iPhone {
+        font-size: calc(24px + 4 * (100vw / 992));
+      }
+
+      @include iPad {
+        font-size: calc(28px + 4 * ((100vw - 768px) / (992 - 768)));
+      }
+  
+      @include NoteBook {
+        font-size: calc(32px + 4 * ((100vw - 992px) / (1540 - 992)));
+      }
     }
+    // &_Ytube {
+
+    // }
   }
 }
